Context API (Multiple Value

--- a/src/App.css
+++ b/src/App.css
@@ -4,15 +4,22 @@
   font-family: 'Kanit', sans-serif;;
 }
 body{
-  background: white;
+  background: rgb(255, 255, 255);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
   margin: 0px;
+  overflow: hidden;
 }
+
+
 .container{
   margin: 30px auto;
-  width:350px;
+  width:1000px;
+  background: rgb(175, 174, 174);
+  padding: 25px;
+  border-radius: 10px;
 }
+
