--- a/src/components/BarMenu.css
+++ b/src/components/BarMenu.css
@@ -1,6 +1,7 @@
 .bar-menu{
     width: 100%;
     height: 50px;
-    background: blue ;
+    background: white;
     box-shadow: 0px 2px 3px black;
+    /* animation:  AnimeBar linear 5s infinite; */
 }
