--- a/src/components/FromComponent.css
+++ b/src/components/FromComponent.css
@@ -15,14 +15,15 @@ input:focus{
     outline: none;
 }
 .btn{
-    background: blue;
+    background: rgb(77, 77, 88);
     color: #dedede;
     cursor: pointer;
-    border: none;
-    border-radius: 2px;
+    border: 2px solid rgb(255, 255, 255);
+    border-radius: 5px;
     display: block;
     margin: 10px 0;
     padding: 10px;
     font-size: 16px;
     width: 100%;
+   
 }
